ChangeLog for package XiMpLe

changes in version 0.10-2 (2017-04-10)
unreleased:
  - thir release is under development

changes in version 0.10-1 (2017-04-10)
fixed:
  - XMLValue() didn't return values in "!value!" special child nodes
  - adjusted internal function XML.nodes() to work with R 3.3 (embedding S4
    objects in lists)
added:
  - new method validXML() for some basic validity checks
  - new class XiMpLe.validity to define valid child nodes and attributes
  - new function is.XiMpLe.validity()
  - new method XMLgenerators() for objects of class XiMpLe.validity
  - new tests for validity checks
  - XMLTree() (and hence objects of class XiMpLe.doc) now also accept a list
    of XiMpLe nodes with <?... ?> style tags as the "xml" slot
changed:
  - moved documentation of is.XiMpLe.node() and is.XiMpLe.doc() to the
    respective classes
  - pasteXML() gained support for tag names starting with "?" and ends them
    with "?>" instead of "/>"
  - parseXMLTree() now accepts more than one XML declaration at the beginning
    of a file
  - version number took a big jump only because of the CRAN policies!

changes in version 0.03-23 (2015-11-24)
changed:
  - relocated the unit tests to tests/testthat
fixed:
  - XMLScanDeep() was said to examine node names, children and values as well
    as attributes, but in fact it was hard-wired on attributes only. removed
    children from the list and added support for names and values
  - corrected internal function setMinIndent() and pasteXMLTag() for better
    indentation for comments
  - internal function indent() can now handle negative levels

changes in version 0.03-22 (2014-12-02)
fixed:
  - added curly brackets to the function bodies of all setGeneric() calls to
    satisfy roxygen2
changed:
  - allowing empty attributes (attr=""), these were skipped, but only if
    there was more than one attribute

changes in version 0.03-21 (2013-12-21)
added: