@@ -3,6 +3,8 @@ ChangeLog for package XiMpLe
 changes in version 0.10-2 (2017-04-10)
 unreleased:
   - thir release is under development
+changed:
+  - consequently use USE.NAMES=FALSE in sapply to reduce memory overhead
 
 changes in version 0.10-1 (2017-04-10)
 fixed:
